--- a/trunk/templates/item.html
+++ b/trunk/templates/item.html
@@ -10,39 +10,51 @@
     <div class="clear"></div>
     
     <div class="description">
-        {% include "item_pic.html" with item_id=item.original_id %}
-        <h2>Description</h2>
-        <p>{{ item.description }}</p>
+        {{ item.description }}
     </div>
     
     <div class="clear"></div>
     
-    <div>
-        <ul>
-            {% for attr in item.attributes %}
-                <li>{{ attr }}</li>
-            {% endfor %}
-        </ul>
-        <ul>
-            {% for cond in conditions %}
-                <li>{{ cond }}</li>
-            {% endfor %}
-        </ul>
+    <div class="caracs">
+        <div class="image">
+            {% include "item_pic.html" with item_id=item.original_id %}
+        </div>
+        <div class="effects">
+            <h2>Effets</h2>
+            <ul>
+                {% for attr in item.attributes %}
+                    <li class="{% cycle "odd" "even" %}">{{ attr }}</li>
+                {% endfor %}
+            </ul>
+        </div>
+        <div class="conditions">
+            <h2>Conditions</h2>
+            <ul>
+                {% for cond in conditions %}
+                    <li class="{% cycle "odd" "even" %}">{{ cond }}</li>
+                {% endfor %}
+            </ul>
+        </div>
         {% if item.is_weapon %}
-        <ul>
-            <li>Co&ucirc;t en PA : {{ item.cost }}</li>
-            <li>Port&eacute;e : {{ item.range }}</li>
-            <li>CC : 1/{{ item.crit_chance }} (+{{ item.crit_damage }})</li>
-            <li>EC : 1/{{ item.failure }}</li>
-        </ul>
+        <div class="attributes">
+            <h2>Attributs</h2>
+            <ul>
+                <li class="odd">Co&ucirc;t en PA : {{ item.cost }}</li>
+                <li class="even">Port&eacute;e : {{ item.range }}</li>
+                <li class="odd">CC : 1/{{ item.crit_chance }} (+{{ item.crit_damage }})</li>
+                <li class="even">EC : 1/{{ item.failure }}</li>
+            </ul>
+        </div>
         {% endif %}
     </div>
     
     <div class="clear"></div>
     
     <div class="craft">
-        <h2>Craft : {{ item.job }} (Niveau {{item.job_level }})</h2>
-        <div>{{ item.recipe }}</div>
+        <div>
+            <h2>Craft :</h2> <h3>{{ item.job }} (Niveau {{item.job_level }})</h3>
+        </div>
+        <span>{{ item.recipe }}</span>
     </div>
     
     <div class="clear"></div>
